# Haskel-learning

./: .replit  QuickSort.hs  cabal.project  fake-package.cabal  main.c  merge_sort.c  merge_sort.h  new-project.cabal  output-haskel.txt  quick_sort.c  quick_sort.h  sorting-algorithms.cabal
app/: Main.hs  MergeSort.hs  QuickSort.hs
