
cabal-version:      2.4
name:               fake-package
version:            0.1.0.0

-- A short (one-line) description of the package.
synopsis:           Sorting algorithms in Haskell

-- A longer description of the package.
description:        Implementation of QuickSort and MergeSort in Haskell

-- The license under which the package is released.
license:            MIT

-- The package author(s).
author:             Ryo Fujimura

-- A copyright notice.
-- copyright:
build-type:         Simple

executable fake-package
    main-is:          Main.hs
    
    -- Modules included in this executable, other than Main.
    other-modules:    QuickSort, MergeSort
    
    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.17.0.0
    hs-source-dirs:   app
    default-language: Haskell2010
